--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "4.14.0",
     "noble": "1.7.0",
-    "socket.io": "^1.5.0"
+    "socket.io": "^1.5.0",
+    "bleno": "^0.4.1"
   },
   "devDependencies": {
     "@types/node": "^6.0.45"
